form user, form timkiem

--- a/projectsjava/src/Frame/formtimkiem.form
+++ b/projectsjava/src/Frame/formtimkiem.form
@@ -152,6 +152,9 @@
               <Image iconType="3" name="/icon/icons8-search-40.png"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bntsearchActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JRadioButton" name="rdten">
           <Properties>
