chỉnh sửa form chính.

--- a/projectsjava/src/Frame/formdangky.form
+++ b/projectsjava/src/Frame/formdangky.form
@@ -236,6 +236,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Quay l&#x1ea1;i"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnbackActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
